# txio

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  Dockerfile  QA_VERIFICATION_REPORT.md  README.md  TODO.md  build_error.txt  build_output.txt  docker-compose.yml  package-lock.json  package.json  ruleset.json  vercel.json
backend/api/: .env.example  Cargo.toml
backend/api/src/: lib.rs  main.rs
backend/api/src/api/: mod.rs
backend/api/src/api/handlers/: admin_handler.rs  ai_handler.rs  auth_handler.rs  collection_handler.rs  mod.rs  recipe_template_handler.rs  terminal_handler.rs  workspace_handler.rs
backend/api/src/api/middleware/: auth.rs
backend/api/src/api/routers/: mod.rs  (+6 more)
backend/api/src/dtos/: admin_dtos.rs  ai.rs  collection_dtos.rs  mod.rs  recipe_template_dtos.rs  request.rs  response.rs  workspace_dtos.rs
backend/api/src/infra/: db.rs
backend/api/src/model/: collection.rs  mod.rs  network.rs  otp.rs  recipe_template.rs  request.rs  rpc.rs  session.rs  user.rs  workspace.rs
backend/api/src/repositories/: collection_repository.rs  mod.rs  otp_repository.rs  recipe_template_repository.rs  request_repository.rs  rpc_repository.rs  session_repository.rs  user_repository.rs  workspace_repository.rs
backend/api/src/services/: admin_service.rs  ai_service.rs  auth_service.rs  collection_service.rs  email_service.rs  mod.rs  otp_service.rs  recipe_template_service.rs  sui_service.rs  terminal_service.rs  workspace_service.rs
backend/api/src/utils/: auth_jwt.rs  config.rs  error.rs  generate_otp.rs  logger.rs  mod.rs
(+179 files in other folders)
