[package]
name = "txio-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
bcrypt = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
brevo = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
url = "2.5"
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
serde_with = "3.8"
urlencoding = "2.1"
